Remove unneeded "--add-opens=java.base/java.lang=ALL-UNNAMED" (#3044)
Closes #2997