@@ -60,11 +60,9 @@ tasks.withType<Test>().configureEach {
             .get()
             .metadata
             .languageVersion
-            .canCompileOrRun(JavaLanguageVersion.of(11))
+            .canCompileOrRun(JavaLanguageVersion.of(24))
     ) {
-        // Suppress "An illegal reflective access operation has occurred" on Java 11 (warning) / Java 16 (error) (https://github.com/pinterest/ktlint/issues/1618)
-        jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED") // Java 11+
         // Suppress warning "sun.misc.Unsafe::objectFieldOffset" on Java24+ (https://github.com/pinterest/ktlint/issues/2973)
-        // jvmArgs("--sun-misc-unsafe-memory-access=allow") // Java 24+
+        jvmArgs("--sun-misc-unsafe-memory-access=allow") // Java 24+
     }
 }
